--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -45,6 +45,12 @@
 
 .listItem {
   margin: 0 0 1.25rem;
+  padding: 1rem;
+
+}
+
+.listItem:hover {
+  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
 }
 
 .lightText {
